[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Minimal deep research agent: Claude Agent SDK + ReAct baseline + Brave Search"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
research = "deep_research.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_research"]
