[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Minimal deep research agent: direct model loop + Brave Search"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.28.0",
    "openai-agents>=0.17.7",
    "python-dotenv>=1.0",
]

[project.scripts]
research = "deep_research.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_research"]
